# my-python-lib

./: .gitignore  README.md  pyproject.toml  setup.py
lib/: lib_functions.py
tests/: test_lib_functions.py
