[tool.poetry]
name = "lib"
version = "0.1.0"
description = "Python private library creation steps"
authors = ["Fabio Bressler <fabio.bressler@gmail.com>"]
readme = "README.md"
# packages = [ { include = "lib", from="." } ]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
